Formulario con validación - DOM - Objects - Arrays

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -2,7 +2,7 @@ html {
   font-family: "Ubuntu", "Lato", sans-serif;
 
   body {
-    width: 100%;
+    width: 100vw;
     background-color: black;
   }
 }
