--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -16,7 +16,8 @@ $shadow1: 0px 1px 0px 1px rgba(0, 0, 0, 0.8);
 $shadow2: 3px 5px 10px rgba(0, 0, 0, 0.8);
 
 /* BORDERS */
-$borderWhite: solid 2px white;
+$borderWhite1: solid 1px white;
+$borderWhite2: solid 2px white;
 
 /* RADIUS */
 $radius: 15px;
