--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -6,9 +6,8 @@
   flex-direction: column;
   z-index: 1;
   display: none;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
+  width: 100%;
+  height: 100%;
   backdrop-filter: blur(2px);
 
   &.active {
@@ -17,27 +16,36 @@
 
   .tab {
     font-family: $font;
-    font-size: 1.2em;
-    font-weight: bold;
+    font-size: 1em;
     position: relative;
     top: 5vh;
     left: 5vw;
-    width: 90vw;
+    width: 85vw;
     height: 90vh;
     color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: rgba(255, 0, 128, 0.8);
+    background-color: rgba(255, 0, 128, 0.5);
     border-radius: $radius;
-    overflow: scroll;
+    overflow: auto;
+
+    @media screen and (min-width: 600px) {
+      width: 70vw;
+      height: 95vh;
+    }
+
+    @media screen and (min-width: 900px) {
+      width: 50vw;
+      height: 95vh;
+    }
   }
 
   .headerTab {
     background-color: $color-magenta;
     width: 100%;
-    height: 100px;
+    height: 50px;
   }
 
   .btnCloseTab {
@@ -45,8 +53,7 @@
     right: 0;
     top: 0;
     color: white;
-    margin: 0px 5px;
-    padding: 10px;
+    margin: 0.3rem 0.5rem;
 
     &:hover {
       color: black;
@@ -56,14 +63,12 @@
   .options {
     display: flex;
     list-style: none;
-    padding-top: 2rem;
 
     .option {
       cursor: pointer;
       flex-grow: 1;
       text-align: center;
-      //align-content: center;
-      line-height: 50px;
+      line-height: 2rem;
       color: white;
       font-weight: lighter;
       font-size: 1.2em;
@@ -72,7 +77,7 @@
 
       &.optionActive {
         font-weight: bolder;
-        border-bottom: 6px solid white;
+        border-bottom: 4px solid white;
       }
     }
   }
@@ -93,67 +98,67 @@
     .contentActive {
       display: block;
     }
-  }
-}
+    .form {
+      align-items: center;
+      justify-content: center;
 
-.form {
-  align-items: center;
-  justify-content: center;
-  /* CADA DIV DEL FORM */
-  .divForm {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 0.1rem;
-    margin-bottom: 0.5rem;
+      /* CADA DIV DEL FORM */
+      .divForm {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 0.1rem;
+        margin-bottom: 0.2rem;
 
-    /* CADA CASILLA DE INPUT */
-    .form-control {
-      width: 300px;
-      height: 50px;
-      border-radius: 10px;
-      border: none;
-      font-size: 1em;
-      text-align: center;
-    }
+        /* CADA CASILLA DE INPUT */
+        .form-control {
+          max-width: 95%;
+          height: 35px;
+          border-radius: 10px;
+          border: none;
+          font-size: 1em;
+          text-align: center;
+        }
 
-    /* BOTON SUBMIT */
-    .btnSubmit,
-    .btnSubmitLogin {
-      background-color: $color-magenta;
-      font-family: $font;
-      text-transform: uppercase;
-      color: white;
-      font-weight: bold;
-      font-size: 0.9em;
-      font-style: italic;
-      letter-spacing: 2px;
-      border: $borderWhite;
-      padding: 1rem;
-      border-radius: 45px 25px 45px 25px;
+        /* BOTON SUBMIT */
+        .btnSubmit,
+        .btnSubmitLogin {
+          background-color: $color-magenta;
+          font-family: $font;
+          text-transform: uppercase;
+          color: white;
+          font-weight: bold;
+          font-size: 0.9em;
+          font-style: italic;
+          letter-spacing: 2px;
+          border: $borderWhite1;
+          margin: 0.5rem 0;
+          padding: 0.5rem 1rem;
+          border-radius: 45px 25px 45px 25px;
 
-      &:hover {
-        transform: scale(1.05);
-        transition: $transition;
+          &:hover {
+            transform: scale(1.05);
+            transition: $transition;
+          }
+        }
       }
-    }
+      /* ALERTS DEL FORM */
+      .alertRegister,
+      .alertLogin {
+        font-size: 0.8em;
+        font-weight: lighter;
+      }
 
-    /* ALERTS DEL FORM */
-    .alertRegister {
-      font-size: 0.8em;
-      font-weight: lighter;
-      color: black;
-    }
-  }
-
-  /* DIV DE TERMS */
-  .terms {
-    display: block;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    a {
-      color: greenyellow;
+      /* DIV DE TERMS */
+      .terms {
+        display: block;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        a {
+          color: greenyellow;
+        }
+      }
     }
   }
 }
