--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -20,13 +20,11 @@
     position: relative;
     top: 5vh;
     left: 5vw;
-    width: 85vw;
+    width: 90vw;
     height: 90vh;
     color: white;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     background-color: rgba(255, 0, 128, 0.5);
     border-radius: $radius;
     overflow: auto;
@@ -34,11 +32,13 @@
     @media screen and (min-width: 600px) {
       width: 70vw;
       height: 95vh;
+      left: 15vw;
     }
 
     @media screen and (min-width: 900px) {
       width: 50vw;
       height: 95vh;
+      left: 25vw;
     }
   }
 
