--- a/scss/_mainIndex.scss
+++ b/scss/_mainIndex.scss
@@ -5,4 +5,10 @@
   flex-direction: column;
   font-size: 2em;
   text-align: center;
+  align-items: center;
+
+  .img {
+    margin-top: 2rem;
+    width: 50px;
+  }
 }
