--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  font-size: .9rem;
   background-color: black;
   text-align: center;
   color: gray;
@@ -14,9 +15,9 @@
       margin: 0.5rem;
 
       &:hover {
-        transform: scale(1.2);
-        opacity: 0.9;
-        transition: all 200ms ease;
+        transform: scale(1.1);
+        opacity: 0.7;
+        transition: all 300ms ease;
       }
     }
   }
@@ -29,7 +30,7 @@
     }
     .devImg {
       margin: 0.5rem;
-      width: 50px;
+      width: 40px;
     }
   }
 }
