--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -8,25 +8,37 @@
   display: none;
   width: 100%;
   height: 100%;
-  backdrop-filter: blur(2px);
+  backdrop-filter: blur(3px);
 
   &.active {
     display: block;
+  }
+
+  input {
+    background-color: rgba(0, 166, 214, 0.2);;
+    outline: none;
+    color:gray;
+  }
+
+  ::placeholder {
+    font-size: 0.9em;
+    font-style: italic;
+    color: darkgray;
   }
 
   .tab {
     font-family: $font;
     font-size: 1em;
     position: relative;
-    top: 5vh;
+    top: 3vh;
     left: 5vw;
     width: 90vw;
     height: 90vh;
-    color: white;
     display: flex;
     flex-direction: column;
-    background-color: rgba(255, 0, 128, 0.5);
+    background-color: rgba(255, 255, 255, 0.8);
     border-radius: $radius;
+    border: $borderWhite1;
     overflow: auto;
 
     @media screen and (min-width: 600px) {
@@ -43,7 +55,7 @@
   }
 
   .headerTab {
-    background-color: $color-magenta;
+    background-color: rgba(255, 255, 255, 1);;
     width: 100%;
     height: 50px;
   }
@@ -52,7 +64,7 @@
     position: absolute;
     right: 0;
     top: 0;
-    color: white;
+    color: gray;
     margin: 0.3rem 0.5rem;
 
     &:hover {
@@ -69,15 +81,13 @@
       flex-grow: 1;
       text-align: center;
       line-height: 2rem;
-      color: white;
-      font-weight: lighter;
-      font-size: 1.2em;
+      color: rgb(99, 99, 99);
+      font-size: 1em;
       font-style: italic;
       margin-top: 1rem;
 
       &.optionActive {
-        font-weight: bolder;
-        border-bottom: 4px solid white;
+        border-bottom: 4px solid $color-magenta;
       }
     }
   }
@@ -90,7 +100,7 @@
     .content {
       width: 100;
       height: 100%;
-      color: white;
+      color: rgb(99, 99, 99);
       display: none;
       padding: 20px;
     }
@@ -137,7 +147,7 @@
           border-radius: 45px 25px 45px 25px;
 
           &:hover {
-            transform: scale(1.05);
+            transform: scale(1.03);
             transition: $transition;
           }
         }
@@ -156,7 +166,7 @@
         align-items: center;
         text-align: center;
         a {
-          color: greenyellow;
+          color: gray;
         }
       }
     }
