--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,9 +1,10 @@
 /* COLOR-PALET */
-$color-cyan: #00a6d6;
-$color-magenta: rgb(255, 0, 128);
-$color-magentaDark: rgb(223, 0, 111);
-$color-orange: #ff4500;
-$color-blue: #0079ff;
+$color-cyan: rgba(0, 166, 214, 1);
+$color-magenta: rgba(255, 0, 128, 1);
+$color-magentaDark: rgba(223, 0, 111, 1);
+$color-orange: rgba(255, 69, 0, 1);
+$color-blue: rgba(0, 121, 255, 1);
+$color-green: rgba(173, 255, 47, 1);
 
 /* FONTS */
 $font: "Ubuntu", "Lato", sans-serif;
@@ -14,6 +15,7 @@ $transition: all 200ms ease;
 /* SHADOWS */
 $shadow1: 0px 1px 0px 1px rgba(0, 0, 0, 0.8);
 $shadow2: 3px 5px 10px rgba(0, 0, 0, 0.8);
+$shadow3: 1px 1px 5px 1px rgba(0, 0, 0, 0.4);
 
 /* BORDERS */
 $borderWhite1: solid 1px white;
@@ -21,3 +23,7 @@ $borderWhite2: solid 2px white;
 
 /* RADIUS */
 $radius: 15px;
+
+/* MARGINS */
+$mp05: 0.5rem;
+$mp1: 1rem;
