--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -15,10 +15,18 @@
   }
 
   input {
-    background-color: rgba(0, 166, 214, 0.2);;
-    outline: none;
-    color:gray;
+    outline: 0.5px solid $color-green;
+    color: gray;
+    font-style: italic;
   }
+
+  /* COLOR-PALET
+$color-cyan: rgba(0, 166, 214, 1);
+$color-magenta: rgba(255, 0, 128, 1);
+$color-magentaDark: rgba(223, 0, 111, 1);
+$color-orange: rgba(255, 69, 0, 1);
+$color-blue: rgba(0, 121, 255, 1);
+$color-green: rgba(173, 255, 47, 1); */
 
   ::placeholder {
     font-size: 0.9em;
@@ -38,7 +46,7 @@
     flex-direction: column;
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: $radius;
-    border: $borderWhite1;
+    border: 1px solid $color-green;
     overflow: auto;
 
     @media screen and (min-width: 600px) {
@@ -55,7 +63,7 @@
   }
 
   .headerTab {
-    background-color: rgba(255, 255, 255, 1);;
+    background-color: rgba(255, 255, 255, 1);
     width: 100%;
     height: 50px;
   }
@@ -87,7 +95,7 @@
       margin-top: 1rem;
 
       &.optionActive {
-        border-bottom: 4px solid $color-magenta;
+        border-bottom: 4px solid $color-green;
       }
     }
   }
@@ -112,6 +120,10 @@
       align-items: center;
       justify-content: center;
 
+      .form-label {
+        margin-bottom: 0.1rem;
+      }
+
       /* CADA DIV DEL FORM */
       .divForm {
         display: flex;
@@ -133,7 +145,7 @@
         /* BOTON SUBMIT */
         .btnSubmit,
         .btnSubmitLogin {
-          background-color: $color-magenta;
+          background-color: $color-green;
           font-family: $font;
           text-transform: uppercase;
           color: white;
@@ -141,7 +153,7 @@
           font-size: 0.9em;
           font-style: italic;
           letter-spacing: 2px;
-          border: $borderWhite1;
+          border: $borderWhite2;
           margin: 0.5rem 0;
           padding: 0.5rem 1rem;
           border-radius: 45px 25px 45px 25px;
