--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,6 +5,7 @@ $color-magentaDark: rgba(223, 0, 111, 1);
 $color-orange: rgba(255, 69, 0, 1);
 $color-blue: rgba(0, 121, 255, 1);
 $color-green: rgba(173, 255, 47, 1);
+$color-danger: rgba(255, 0, 0, 0.8);
 
 /* FONTS */
 $font: "Ubuntu", "Lato", sans-serif;
@@ -25,5 +26,6 @@ $borderWhite2: solid 2px white;
 $radius: 15px;
 
 /* MARGINS */
+$mp02: 0.2rem;
 $mp05: 0.5rem;
 $mp1: 1rem;
