--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -23,6 +23,7 @@ $borderWhite1: solid 1px white;
 $borderWhite2: solid 2px white;
 
 /* RADIUS */
+$radiusMin: 10px;
 $radius: 15px;
 
 /* MARGINS */
