--- a/css/style.css
+++ b/css/style.css
@@ -395,10 +395,13 @@ html body .btn:hover {
 }
 
 .mainCarrito {
-  display: none;
+  position: absolute;
+  opacity: 0;
+  transition: all 200ms ease;
+  transform: scale(0.2);
 }
 .mainCarrito.active {
-  display: block;
+  opacity: 1;
   position: absolute;
   top: 0;
   left: 0;
@@ -409,6 +412,7 @@ html body .btn:hover {
   background-color: transparent;
   padding: 2rem;
   backdrop-filter: blur(3px);
+  transform: scale(1);
 }
 .mainCarrito .tablaCarrito {
   display: flex;
@@ -418,7 +422,7 @@ html body .btn:hover {
   height: 90%;
   overflow: auto;
   background-color: rgba(255, 255, 255, 0.8);
-  border-radius: 15px;
+  border-radius: 10px;
   padding: 0.5rem;
   position: relative;
 }
@@ -436,8 +440,29 @@ html body .btn:hover {
   margin-top: 1rem;
   justify-content: space-around;
 }
+.mainCarrito .tablaCarrito .tabla #iconSumar, .mainCarrito .tablaCarrito .tabla #iconRestar {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  margin: 0, 0.5rem;
+  color: gray;
+}
+.mainCarrito .tablaCarrito .tabla #iconSumar #i, .mainCarrito .tablaCarrito .tabla #iconRestar #i {
+  background-color: transparent;
+}
+.mainCarrito .tablaCarrito .tabla .tituloCarrito {
+  color: #272727;
+  font-size: 1.2em;
+  font-weight: 500;
+  border-bottom: solid 1.5px #272727;
+}
 .mainCarrito .sumaTotal {
+  background-color: rgb(0, 121, 255);
   margin: 1rem;
+  padding: 0.5rem;
+  color: white;
+  font-weight: 400;
+  font-size: 1.1em;
 }
 .mainCarrito .btnVaciarCarrito, .mainCarrito .finalizarCompra {
   margin: 0.5rem;
