--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -37,9 +37,18 @@
     display: flex;
     flex-direction: column;
     background-color: rgba(255, 255, 255, 0.8);
-    border-radius: $radius;
+    border-radius: $radiusMin;
     border: 1px solid $color-green;
     overflow: auto;
+
+    &::-webkit-scrollbar {
+      width: 0.5rem;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: $color-green;
+      border-radius: 50px;
+    }
 
     @media screen and (min-width: 600px) {
       width: 70vw;
