--- a/scss/_mainIndex.scss
+++ b/scss/_mainIndex.scss
@@ -9,5 +9,9 @@
     text-align: center;
     justify-content: center;
     align-items: center;
+
+    .mainText {
+      margin-bottom: 1rem;
+    }
   }
 }
