--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /* COLOR-PALET */
 /* FONTS */
+/* TRANSFORM HOVERS BTNS */
 /* TRANSITIONS */
 /* SHADOWS */
 /* BORDERS */
@@ -61,9 +62,16 @@ html body .btn:hover {
   display: flex;
   flex-direction: column;
   background-color: rgba(255, 255, 255, 0.8);
-  border-radius: 15px;
+  border-radius: 5px;
   border: 1px solid rgb(173, 255, 47);
   overflow: auto;
+}
+.tabContainer .tab::-webkit-scrollbar {
+  width: 0.5rem;
+}
+.tabContainer .tab::-webkit-scrollbar-thumb {
+  background-color: rgb(173, 255, 47);
+  border-radius: 50px;
 }
 @media screen and (min-width: 600px) {
   .tabContainer .tab {
@@ -214,28 +222,41 @@ html body .btn:hover {
   text-decoration: none;
 }
 .header .headerContainer .navBar .btnCarrito .carritoIcon {
-  max-width: 32px;
+  font-size: 24px;
+  color: whitesmoke;
+  position: relative;
 }
-.header .headerContainer .navBar .btnCarrito .cantidadProductosCarritoIcon {
+.header .headerContainer .navBar .btnCarrito .carritoIcon .cantidadProductosCarritoIcon {
   text-align: center;
+  position: absolute;
   min-width: 20px;
-  max-height: 20px;
+  min-height: 20px;
   border-radius: 50px;
-  padding: 4px;
-  font-size: 0.7em;
+  padding: 20%;
+  font-size: 0.45em;
   color: white;
-  background-color: rgb(223, 0, 111);
+  background-color: rgba(223, 0, 111, 0.7);
+  top: -10px;
+  right: -15px;
 }
 .header .headerContainer .navBar .btnCarrito:hover {
-  transform: scale(1.1);
+  transform: scale(1.06) rotate(-3deg);
   transition: all 200ms ease;
 }
-.header .headerContainer .userText {
+.header .headerContainer .navBar .userText {
+  cursor: pointer;
+  font-weight: lighter;
+  background-color: greenyellow;
+  padding: 5px 10px;
+  border-radius: 15px;
   margin-top: 1rem;
   font-size: 0.8em;
-  font-style: italic;
   text-align: center;
-  color: rgb(173, 255, 47);
+  color: gray;
+}
+.header .headerContainer .navBar .userText:hover {
+  transform: scale(1.05);
+  transition: all 200ms ease;
 }
 
 .footer {
@@ -282,6 +303,9 @@ html body .btn:hover {
   justify-content: center;
   align-items: center;
 }
+.main .containerMain .mainText {
+  margin-bottom: 1rem;
+}
 
 @media (min-width: 600px) {
   .mainProductos {
@@ -293,38 +317,34 @@ html body .btn:hover {
 .mainProductos .producto {
   background-color: rgb(0, 166, 214);
   background: linear-gradient(0deg, rgb(0, 166, 214) 0%, rgb(0, 121, 255) 100%);
-  width: 300px;
-  height: 320px;
+  width: 280px;
+  height: 300px;
   margin: 2rem 0;
-  padding: 0.2rem;
+  padding: 1rem;
   border-radius: 25px;
   box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.4);
   border: solid 2px white;
   color: white;
   position: relative;
-  margin: 1rem;
+  margin: 1rem 0.2rem;
+  align-items: center;
+  align-content: space-between;
 }
-.mainProductos .producto .remera {
-  height: 210px;
+.mainProductos .producto .productoImg {
+  max-width: 250px;
 }
-.mainProductos .producto .h2 {
-  text-align: center;
+.mainProductos .producto .textContent {
+  text-align: justify;
+  position: absolute;
+  bottom: 10px;
+}
+.mainProductos .producto .textContent .nombreText {
   font-size: 1.3em;
   font-weight: 500;
   font-style: italic;
   margin-bottom: 0.2rem;
 }
-.mainProductos .producto select {
-  border: 1px solid black;
-  border-radius: 15px;
-  width: 4rem;
-  border: none;
-}
-.mainProductos .producto select option {
-  text-align: center;
-  font-size: 0.8em;
-}
-.mainProductos .producto .priceProduct {
+.mainProductos .producto .textContent .precioText {
   margin-top: 0.2rem;
 }
 .mainProductos .producto .btnAgregar {
@@ -409,22 +429,41 @@ html body .btn:hover {
   z-index: 1;
   width: 100vw;
   height: 100vh;
+  padding: 2%;
   background-color: transparent;
-  padding: 2rem;
-  backdrop-filter: blur(3px);
   transform: scale(1);
+}
+@media screen and (min-width: 600px) {
+  .mainCarrito.active {
+    padding: 2% 10%;
+  }
 }
 .mainCarrito .tablaCarrito {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 90%;
-  height: 90%;
+  font-size: 0.8em;
+  width: 100%;
+  height: 100%;
   overflow: auto;
-  background-color: rgba(255, 255, 255, 0.8);
-  border-radius: 10px;
-  padding: 0.5rem;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 5px;
+  padding: 0.2rem;
   position: relative;
+  backdrop-filter: blur(15px);
+}
+.mainCarrito .tablaCarrito::-webkit-scrollbar {
+  width: 0.5rem;
+}
+.mainCarrito .tablaCarrito::-webkit-scrollbar-thumb {
+  background-color: rgb(0, 121, 255);
+  border-radius: 50px;
+}
+@media screen and (min-width: 600px) {
+  .mainCarrito .tablaCarrito {
+    font-size: 1em;
+    padding: 1.5rem;
+  }
 }
 .mainCarrito .tablaCarrito .headerCarrito {
   display: flex;
@@ -440,14 +479,16 @@ html body .btn:hover {
   margin-top: 1rem;
   justify-content: space-around;
 }
-.mainCarrito .tablaCarrito .tabla #iconSumar, .mainCarrito .tablaCarrito .tabla #iconRestar {
+.mainCarrito .tablaCarrito .tabla #iconSumar,
+.mainCarrito .tablaCarrito .tabla #iconRestar {
   background-color: transparent;
   cursor: pointer;
   border: none;
-  margin: 0, 0.5rem;
+  margin: 0, 0.2rem;
   color: gray;
 }
-.mainCarrito .tablaCarrito .tabla #iconSumar #i, .mainCarrito .tablaCarrito .tabla #iconRestar #i {
+.mainCarrito .tablaCarrito .tabla #iconSumar #i,
+.mainCarrito .tablaCarrito .tabla #iconRestar #i {
   background-color: transparent;
 }
 .mainCarrito .tablaCarrito .tabla .tituloCarrito {
@@ -455,6 +496,16 @@ html body .btn:hover {
   font-size: 1.2em;
   font-weight: 500;
   border-bottom: solid 1.5px #272727;
+}
+.mainCarrito .imgItemCarrito {
+  height: 64px;
+  width: auto;
+}
+@media screen and (min-width: 600px) {
+  .mainCarrito .imgItemCarrito {
+    width: 72px;
+    height: auto;
+  }
 }
 .mainCarrito .sumaTotal {
   background-color: rgb(0, 121, 255);
@@ -464,7 +515,8 @@ html body .btn:hover {
   font-weight: 400;
   font-size: 1.1em;
 }
-.mainCarrito .btnVaciarCarrito, .mainCarrito .finalizarCompra {
+.mainCarrito .btnVaciarCarrito,
+.mainCarrito .finalizarCompra {
   margin: 0.5rem;
   background-color: rgba(255, 0, 0, 0.8);
   color: white;
@@ -475,22 +527,13 @@ html body .btn:hover {
   justify-content: space-between;
   cursor: pointer;
 }
-.mainCarrito .btnVaciarCarrito:hover, .mainCarrito .finalizarCompra:hover {
+.mainCarrito .btnVaciarCarrito:hover,
+.mainCarrito .finalizarCompra:hover {
   scale: 1.05;
   transform: all 200ms ease;
 }
 .mainCarrito .finalizarCompra {
   background-color: rgb(0, 121, 255);
-}
-.mainCarrito .alerta {
-  padding: 2rem;
-  border-radius: 15px;
-  color: gray;
-  font-weight: 500;
-  font-style: italic;
-}
-.mainCarrito .alerta .carritoVacio {
-  width: 64px;
 }
 
 .mainTerms {
