--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -25,33 +25,47 @@
         text-decoration: none;
 
         .carritoIcon {
-          max-width: 32px;
-        }
+          font-size: 24px;
+          color: whitesmoke;
+          position: relative;
 
-        .cantidadProductosCarritoIcon {
-          text-align: center;
-          min-width: 20px;
-          max-height: 20px;
-          border-radius: 50px;
-          padding: 4px;
-          font-size: 0.7em;
-          color: white;
-          background-color: $color-magentaDark;
+          .cantidadProductosCarritoIcon {
+            text-align: center;
+            position: absolute;
+            min-width: 20px;
+            min-height: 20px;
+            border-radius: 50px;
+            padding: 20%;
+            font-size: 0.45em;
+            color: white;
+            background-color: rgba(223, 0, 111, 0.7);
+            top: -10px;
+            right: -15px;
+          }
         }
 
         &:hover {
-          transform: scale(1.1);
+          transform: scale(1.06) rotate(-3deg);
           transition: $transition;
         }
       }
-    }
 
-    .userText {
-      margin-top: 1rem;
-      font-size: 0.8em;
-      font-style: italic;
-      text-align: center;
-      color: $color-green;
+      .userText {
+        cursor: pointer;
+        font-weight: lighter;
+        background-color: greenyellow;
+        padding: 5px 10px;
+        border-radius: $radius;
+        margin-top: 1rem;
+        font-size: 0.8em;
+        text-align: center;
+        color: gray;
+
+        &:hover {
+          transform: $transform1;
+          transition: $transition;
+        }
+      }
     }
   }
 }
