--- a/scss/_mainProductos.scss
+++ b/scss/_mainProductos.scss
@@ -12,43 +12,41 @@
       rgba(0, 166, 214, 1) 0%,
       rgba(0, 121, 255, 1) 100%
     );
-    width: 300px;
-    height: 320px;
+    width: 280px;
+    height: 300px;
     margin: 2rem 0;
-    padding: $mp02;
+    padding: $mp1;
     border-radius: 25px;
     box-shadow: $shadow3;
     border: $borderWhite2;
     color: white;
     position: relative;
-    margin: $mp1;
+    margin: $mp1 $mp02;
+    align-items: center;
+    align-content: space-between;
 
-    .remera {
-      height: 210px;
+    .productoImg {
+      max-width: 250px;
     }
 
-    .h2 {
-      text-align: center;
-      font-size: 1.3em;
-      font-weight: 500;
-      font-style: italic;
-      margin-bottom: $mp02;
-    }
+    .textContent {
+      text-align: justify;
+      position: absolute;
+      bottom: 10px;
 
-    select {
-      border: 1px solid black;
-      border-radius: $radius;
-      width: 4rem;
-      border: none;
 
-      option {
-        text-align: center;
-        font-size: 0.8em;
+
+
+      .nombreText {
+        font-size: 1.3em;
+        font-weight: 500;
+        font-style: italic;
+        margin-bottom: $mp02;
       }
-    }
-
-    .priceProduct {
-      margin-top: $mp02;
+  
+      .precioText {
+        margin-top: $mp02;
+      }
     }
 
     .btnAgregar {
