--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,10 +5,14 @@ $color-magentaDark: rgba(223, 0, 111, 1);
 $color-orange: rgba(255, 69, 0, 1);
 $color-blue: rgba(0, 121, 255, 1);
 $color-green: rgba(173, 255, 47, 1);
+$color-greenStrong: rgb(0, 255, 0);
 $color-danger: rgba(255, 0, 0, 0.8);
 
 /* FONTS */
 $font: "Ubuntu", "Lato", sans-serif;
+
+/* TRANSFORM HOVERS BTNS */
+$transform1: scale(1.05);
 
 /* TRANSITIONS */
 $transition: all 200ms ease;
@@ -23,7 +27,8 @@ $borderWhite1: solid 1px white;
 $borderWhite2: solid 2px white;
 
 /* RADIUS */
-$radiusMin: 10px;
+$radiusMin: 5px;
+$radiusMed: 10px;
 $radius: 15px;
 
 /* MARGINS */
