Funcionando bien: Formularios de Registro/Ingreso, btn para Login/Logout

--- a/css/style.css
+++ b/css/style.css
@@ -456,7 +456,7 @@ html body .btn:hover {
   width: 0.5rem;
 }
 .mainCarrito .tablaCarrito::-webkit-scrollbar-thumb {
-  background-color: rgb(0, 121, 255);
+  background-color: rgba(0, 121, 255, 0.6);
   border-radius: 50px;
 }
 @media screen and (min-width: 600px) {
