--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,6 +7,7 @@ $color-blue: rgba(0, 121, 255, 1);
 $color-green: rgba(173, 255, 47, 1);
 $color-greenStrong: rgb(0, 255, 0);
 $color-danger: rgba(255, 0, 0, 0.8);
+$colorbgSweetAlert :rgba(255, 255, 255, 0.9);
 
 /* FONTS */
 $font: "Ubuntu", "Lato", sans-serif;
