--- a/scss/_carrito.scss
+++ b/scss/_carrito.scss
@@ -41,7 +41,7 @@
     }
 
     &::-webkit-scrollbar-thumb {
-      background-color: $color-blue;
+      background-color: rgba(0, 121, 255, 0.6);
       border-radius: 50px;
     }
 
