--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ html body .btn:hover {
   left: 0;
   display: flex;
   flex-direction: column;
-  z-index: 1;
+  z-index: 30;
   display: none;
   width: 100%;
   height: 100%;
@@ -40,6 +40,7 @@ html body .btn:hover {
 }
 .tabContainer.active {
   display: block;
+  position: fixed;
 }
 .tabContainer input {
   outline: 0.5px solid rgb(173, 255, 47);
@@ -197,14 +198,17 @@ html body .btn:hover {
 }
 
 .header {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.7);
   color: white;
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
 .header .headerContainer {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  padding: 0.5rem;
+  padding: 0.2rem;
 }
 .header .headerContainer .headerLogo {
   max-width: 150px;
@@ -253,6 +257,7 @@ html body .btn:hover {
   font-size: 0.8em;
   text-align: center;
   color: gray;
+  border: 0;
 }
 .header .headerContainer .navBar .userText:hover {
   transform: scale(1.05);
@@ -290,6 +295,10 @@ html body .btn:hover {
   margin: 0.5rem;
   width: 40px;
 }
+.footer .footerDev .devImg:hover {
+  transform: scale(1.05);
+  transition: all 200ms ease;
+}
 
 .main {
   padding: 2rem 2rem 4rem;
@@ -304,14 +313,33 @@ html body .btn:hover {
   align-items: center;
 }
 .main .containerMain .mainText {
+  background-color: rgba(219, 219, 219, 0.4);
+  padding: 0.5rem;
+  border-radius: 15px;
+  width: 80%;
   margin-bottom: 1rem;
 }
+.main .wtpFixed {
+  position: fixed;
+  bottom: 25px;
+  right: 20px;
+  z-index: 3;
+  width: 48px;
+}
+.main .wtpFixed:hover {
+  transform: scale(1.06) rotate(-3deg);
+  transition: all 200ms ease;
+}
 
+.mainProductos {
+  padding: 0rem 1rem;
+}
 @media (min-width: 600px) {
   .mainProductos {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
   }
 }
 .mainProductos .producto {
@@ -319,16 +347,14 @@ html body .btn:hover {
   background: linear-gradient(0deg, rgb(0, 166, 214) 0%, rgb(0, 121, 255) 100%);
   width: 280px;
   height: 300px;
-  margin: 2rem 0;
   padding: 1rem;
   border-radius: 25px;
   box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.4);
   border: solid 2px white;
   color: white;
   position: relative;
-  margin: 1rem 0.2rem;
+  margin: 1rem 15px;
   align-items: center;
-  align-content: space-between;
 }
 .mainProductos .producto .productoImg {
   max-width: 250px;
@@ -422,16 +448,15 @@ html body .btn:hover {
 }
 .mainCarrito.active {
   opacity: 1;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   flex-direction: column;
-  z-index: 1;
   width: 100vw;
   height: 100vh;
-  padding: 2%;
   background-color: transparent;
   transform: scale(1);
+  z-index: 100;
 }
 @media screen and (min-width: 600px) {
   .mainCarrito.active {
@@ -447,10 +472,10 @@ html body .btn:hover {
   height: 100%;
   overflow: auto;
   background-color: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(15px);
   border-radius: 5px;
   padding: 0.2rem;
   position: relative;
-  backdrop-filter: blur(15px);
 }
 .mainCarrito .tablaCarrito::-webkit-scrollbar {
   width: 0.5rem;
