--- a/scss/_carrito.scss
+++ b/scss/_carrito.scss
@@ -6,16 +6,15 @@
 
   &.active {
     opacity: 1;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     flex-direction: column;
-    z-index: 1;
     width: 100vw;
     height: 100vh;
-    padding: 2%;
     background-color: transparent;
     transform: scale(1);
+    z-index: 100;
 
     @media screen and (min-width: 600px) {
       padding: 2% 10%;
@@ -31,10 +30,10 @@
     height: 100%;
     overflow: auto;
     background-color: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(15px);
     border-radius: $radiusMin;
     padding: 0.2rem;
     position: relative;
-    backdrop-filter: blur(15px);
 
     &::-webkit-scrollbar {
       width: 0.5rem;
