--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -4,7 +4,7 @@
   left: 0;
   display: flex;
   flex-direction: column;
-  z-index: 1;
+  z-index: 30;
   display: none;
   width: 100%;
   height: 100%;
@@ -12,6 +12,7 @@
 
   &.active {
     display: block;
+    position: fixed;
   }
 
   input {
