--- a/scss/_mainIndex.scss
+++ b/scss/_mainIndex.scss
@@ -11,7 +11,23 @@
     align-items: center;
 
     .mainText {
+      background-color: rgba(219, 219, 219, 0.4);
+      padding: $mp05;
+      border-radius: $radius;
+      width: 80%;
       margin-bottom: 1rem;
+    }
+  }
+  .wtpFixed {
+    position: fixed;
+    bottom: 25px;
+    right: 20px;
+    z-index: 3;
+    width: 48px;
+
+    &:hover {
+      transform: $transform2;
+      transition: $transition;
     }
   }
 }
