--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -71,6 +71,8 @@
   }
 
   .btnCloseTab {
+    border: none;
+    background-color: transparent;
     position: absolute;
     right: 0;
     top: 0;
