--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -26,6 +26,8 @@
       .btnCarrito {
         display: flex;
         text-decoration: none;
+        background-color: transparent;
+        border: none;
 
         .carritoIcon {
           font-size: 24px;
